# learn_metal

./: .pre-commit-config.yaml  .trivis.yml  README.md  circle.yml
ios/metal-sample/doc/: ios metal编程基础.pptx
ios/metal-sample/metal-sample/: AppDelegate.h  AppDelegate.m  MPSBasic.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  add.metal  main.m
ios/metal-sample/metal-sample.xcodeproj/: project.pbxproj
ios/metal-sample/metal-sampleTests/: metal_sampleTests.m
ios/metal-sample/metal-sampleUITests/: metal_sampleUITests.m
ios/metal_calc/metal_calc/: AppDelegate.h  AppDelegate.m  MetalAdder.h  MetalAdder.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/metal_calc/metal_calc.xcodeproj/: project.pbxproj
mac/metal-macapp/metal-macapp/: add.metal  main.m  metal_hepler.m
mac/metal-macapp/metal-macapp.xcodeproj/: project.pbxproj
metal-app/metal-app/: AppDelegate.swift  ComputeHelper.swift  MTLHelper.swift  SceneDelegate.swift  VideoCapture.swift  ViewController.swift
metal-app/metal-app.xcodeproj/: project.pbxproj
metal-play.playground/: Contents.swift
metal-play.playground/Resources/: compute.metal
metal-play.playground/Sources/: MetalKernel.swift
swift/basic/: CMakeLists.txt  README.md  main.swift
swift/metal-play.playground/: Contents.swift
swift_cpp/: CMakeLists.txt  README.md  handler.cc  handler.h  handler_wrapper.h  handler_wrapper.mm  main.swift  swift_cpp-Bridging-Header.h
swift_sample/: CMakeLists.txt  main.swift  simd_sample.swift
tools/: .clang_format.hook  .copyright.hook
(+21 files in other folders)
